--- a/Develop/assets/login.html
+++ b/Develop/assets/login.html
@@ -15,9 +15,38 @@
 <!--application title/graphics-->
 <div class="title-text">
     <h1 id="title"> Photo Social Media </h1>
-    <p id="login-text"> Log in to get started! </p>
 </div>
+
+<!--for signup form/div-->
+<h3 id="signup-text">Create a Profile Below:</h3>
+<div class="signup-form-box">
+  <form class="form-horizontal">
+      <div class="form-group">
+        <label for="inputEmail3" class="col-sm-2 control-label">Username</label>
+        <div class="col-sm-10">
+          <input type="email" class="form-control" id="inputEmail3" placeholder="Create username">
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+        <div class="col-sm-10">
+          <input type="password" class="form-control" id="inputPassword3" placeholder="Create password">
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+          <button type="submit" class="btn btn-default">Sign up</button>
+        </div>
+      </div>
+    </div>
+    </form> 
+
 <!--for login form/div-->
+<h3 id="login-text"> Login Below: </h3>
 <div class="login-form-box">
     <form class="form-horizontal">
         <div class="form-group">
