--- a/assets/login.html
+++ b/assets/login.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
-    <link rel= "stylesheet" href="./style.css">
+    <link rel= "stylesheet" href="/project2/assets/style.css">
     <title> Login Page </title>
 </head>
 <body>
