--- a/assets/profile.html
+++ b/assets/profile.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
     <link rel= "stylesheet" href="./style.css">
-    <title> Login Page </title>
+    <title> Profile Page </title>
 </head>
 <body>
     <div class="logo">
