--- a/assets/profile.html
+++ b/assets/profile.html
@@ -12,8 +12,8 @@
     <title> Profile Page </title>
 </head>
 <body>
-    <div class="logo">
-        <h2> Logo </h2>
+    <div>
+        <h2 class="logo"> 📷 </h2>
     </div>
 <header>
     <div class="user-profile">
