--- a/assets/login.html
+++ b/assets/login.html
@@ -14,7 +14,7 @@
 <body>
 <!--application title/graphics-->
 <div class="title-text">
-    <h1 id="title"> Photo Social Media </h1>
+    <h1 id="title"> Shutter Up </h1>
 </div>
 
 <!--for signup form/div-->
