--- a/assets/login.html
+++ b/assets/login.html
@@ -8,17 +8,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
-    <link rel= "stylesheet" href="/project2/assets/style.css">
+    <link rel= "stylesheet" href="/public/css/style.css">
     <title> Login Page </title>
 </head>
 <body>
 <!--application title/graphics-->
 <div class="title-text">
-
-
     <h1 id="title">  📷  Shutter Up! 📷  </h1>
-
-
 </div>
 
 <!--for signup form/div-->
@@ -28,7 +24,7 @@
       <div class="form-group">
         <label for="inputEmail3" class="col-sm-2 control-label">Username</label>
         <div class="col-sm-10">
-          <input type="email" class="form-control" id="inputEmail3" placeholder="Create username">
+          <input type="input" class="form-control" id="inputEmail3" placeholder="Create username">
         </div>
       </div>
       <div class="form-group">
@@ -56,7 +52,7 @@
         <div class="form-group">
           <label for="inputEmail3" class="col-sm-2 control-label">Username</label>
           <div class="col-sm-10">
-            <input type="email" class="form-control" id="inputEmail3" placeholder="Username">
+            <input type="input" class="form-control" id="inputEmail3" placeholder="Username">
           </div>
         </div>
         <div class="form-group">
