--- a/assets/profile.html
+++ b/assets/profile.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
-    <link rel= "stylesheet" href="./style.css">
+    <link rel= "stylesheet" href="/public/css/style.css">
     <title> Profile Page </title>
 </head>
 <body>
@@ -18,9 +18,6 @@
 <header>
     <div class="user-profile">
         <h2> User Name </h2>   
-    </div>
-    <div class="friend-button">
-        <button type="button" class="btn btn-warning"> Add Friend </button>
     </div>
 </header>
 <div class="photo-upload">
