--- a/assets/profile.html
+++ b/assets/profile.html
@@ -21,8 +21,9 @@
     </div>
 </header>
 <div class="photo-upload">
-    <label for="formFileDisabled" class="form-label"> Upload Your Photos!</label>
-    <input class="form-control" type="file" id="formFileDisabled" disabled />
+    <button id="upload_widget" class="cloudinary-button">Upload Your Photos!</button>
+    <!-- <label for="formFileDisabled" class="form-label"> Upload Your Photos!</label> -->
+    <!-- <input class="form-control" type="file" id="formFileDisabled" disabled /> -->
 </div>
 <div class="row align-items-center">
     <div class="col">
@@ -47,4 +48,6 @@
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
+<script src="./controllers/api/widget.js"></script>
 </html>
